# AlgoTrader

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  railway.json  requirements.txt
algobot/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
algobot/app/: config.py  indicators.py  live_signal_schema.py  logging_config.py  main.py  runtime_settings.py  telegram_notify.py
algobot/app/approvals/: __init__.py  service.py
algobot/app/backtesting/: engine.py  metrics.py
algobot/app/broker/: etoro_client.py  etoro_market_data.py  instrument_resolver.py
algobot/app/data/: engine.py  yfinance_loader.py
algobot/app/execution/: routes.py  trader.py
algobot/app/models/: execution.py  execution_queue.py  live_signal.py  paper.py  screener.py  trade.py  workflow.py
algobot/app/notifications/: routes.py  scheduler.py  telegram.py  telegram_bot.py
algobot/app/paper/: __init__.py  service.py
algobot/app/risk/: guardrails.py  position_sizing.py  rules.py
algobot/app/screener/: filters.py  scoring.py  service.py
algobot/app/signals/: __init__.py  routes.py  service.py
algobot/app/storage/: db.py  repositories.py
algobot/app/strategies/: __init__.py  mean_reversion.py  pullback_trend.py  vwap_reclaim.py
algobot/app/utils/: time.py
algobot/app/workflow/: routes.py  service.py
algobot/reports/: crwv_pending_approval_2026-04-10.md  crwv_yahoo_pending_proposal_2026-04-10.md  nvda_strategy_report.md
algobot/scripts/: check_live_signals.py  register_telegram_webhook.py  research_nvda.py  run_backtest.py  run_telegram_bot.py  run_universe_backtests.py  seed_demo_data.py
algobot/tests/: test_backtest.py  test_live_signals.py  test_risk_rules.py  test_screener_service.py  test_strategy_signals.py  test_telegram_bot.py  test_telegram_webhook.py  test_workflow_service.py  test_yfinance_loader.py
app/: config.py  indicators.py  logging_config.py  main.py  metrics.py  runtime_settings.py  telegram_notify.py  telegram_safe.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: trading.py
backend/app/services/: backtester.py  execution.py  indicators.py  market_data.py  signal_engine.py
docs/: alpaca_paper_start.md  alpaca_paper_to_live_roadmap.md  continuous_learning_runbook.md  institutional_roadmap_status.md  production_runbook.md  railway_runbook.md
frontend/: next.config.ts  package-lock.json  package.json
migrations/: env.py
monitoring/: prometheus.yml
(+253 files in other folders)
